--- a/_posts/2018-10-01-table.md
+++ b/_posts/2018-10-01-table.md
@@ -39,7 +39,7 @@ shapes.
 </div>{% include metagraph-table.html %}<div class="l-center l-content" markdown="1">
 The initial generation of the numbers in this table was overseen by MGGG's Zach Schutzman and Daryl DeFord, using a combination of [python code](https://github.com/zschutzman/enumerator) and an algorithm coded by Bob Harris ([code](http://www.bumblebeagle.org/polyominoes/tilingcounting/), [writeup](http://www.bumblebeagle.org/polyominoes/tilingcounting/counting_9x9_tilings.pdf); [OEIS](https://oeis.org/A172477)) in C in 2010. This work was extended in 2021 by Amy Becker, Gabe Schoenbach, and Bhushan Suwal, using their own [Julia code](https://github.com/gerrymandr/trees/tree/main/ZDD) and the `enumpart` algorithm outlined [here](https://imai.fas.harvard.edu/research/files/enumerate.pdf).
 
-As of April 2021, the missing values on this table are expected to take weeks of compute time and hundreds of gigabytes of RAM.
+As of April 2021, the missing values on this table are expected to take weeks of computation time and hundreds of gigabytes of RAM.
 
 An earlier version of the table, which appears in November's print version of
 Scientific American, used partition enumeration code that was included with the
