Move papers in root directory to publications folder and add redirects to preserve old urls.

--- a/_posts/2019-06-07-alaska.md
+++ b/_posts/2019-06-07-alaska.md
@@ -44,7 +44,7 @@ matchings for each of the relevant states.
 </table>
 </div>
 
-[Read the preprint here.](/uploads/Alaska.pdf)
+[Read the preprint here.](/publications/Alaska.pdf)
 
 You can find all of the code and data used in the report, as well as technical
 instructions for reproducing our work, in our
