--- a/_posts/2019-04-29-jobs.md
+++ b/_posts/2019-04-29-jobs.md
@@ -1,6 +1,6 @@
 ---
 title: Jobs at MGGG
-date: 2021-02-11
+date: 2021-11-10
 authors: MGGG
 categories:
     - news
@@ -20,9 +20,11 @@ redistricting. Our mission is both technical and civic, and we aim to drive
 cutting-edge research, amplify the voices of the public and the civil rights
 community, and improve accountability in the redistricting process.
 
-As of February 2021, we are currently looking for a **[Software Developer](#software-developer)**.
+As of November 2021, we are currently looking for a **[Full Stack Web Developer](#web-developer)**
+for a medium-term (3-4 months) full-time position. The Lab is based on the Tufts campus in
+Medford/Somerville, MA, but fully remote work is a possibility.
 Letters of interest are being accepted
-by email to [jobs@mggg.org](mailto:jobs@mggg.org). Please include a CV with
+by email to [jobs@mggg.org](mailto:jobs@mggg.org). Please include a CV/résumé with
 links to relevant projects, with your GitHub username if applicable. 
 
 Access to voting rights for communities of color and other marginalized groups
