update first paragraph.

--- a/_posts/2019-04-29-jobs.md
+++ b/_posts/2019-04-29-jobs.md
@@ -14,11 +14,10 @@ description: "Come join our team! We’re hiring a new **Software Developer** th
 [Read more about the positions here.](/jobs)"
 ---
 
-The Metric Geometry and Gerrymandering Group (MGGG) is a research organization
-based at Tufts and MIT studying applications of geometry and computing to U.S.
-redistricting. Our mission is both technical and civic, and we aim to drive
-cutting-edge research, amplify the voices of the public and the civil rights
-community, and improve accountability in the redistricting process.
+The MGGG Redistricting Lab is a research organization based at Tufts University studying
+applications of geometry and computing to U.S. redistricting. Our mission is both technical
+and civic, and we aim to drive cutting-edge research, amplify the voices of the public and the civil
+rights community, and improve accountability in the redistricting process.
 
 As of November 2021, we are currently looking for a **[Full Stack Web Developer](#web-developer)**
 for a medium-term (3-4 months) full-time position. The Lab is based on the Tufts campus in
