updates to coi post.

--- a/_posts/2021-11-1-cois.md
+++ b/_posts/2021-11-1-cois.md
@@ -6,22 +6,20 @@ categories:
 authors: MGGG
 featured: true
 permalink: /cois
-layout: freeform
 image: "/uploads/mi_cois.png"
 excerpt_separator: "<!--more-->"
 ---
 
-<div class="l-content l-center" markdown="1">
-{% include post_heading.html %}
 
 In 2021, an unprecedented number of states, counties, cities, and other local jurisdictions are considering Communities of Interest, or “COIs,” in the redistricting process. The precise legal definition of a COI varies across the country when it is spelled out at all.  Broadly speaking, COIs are geographical areas defined by a residential group with significant shared interests that are relevant to policy and representation. These interests can be cultural, economic, or environmental; they can concern employment or public services or infrastructure—basically, relevant interests include anything that causes neighborhoods or regions to need a shared voice in government. Prioritizing COIs is generally considered to be an essential ingredient of fair redistricting but, in practice, it is prohibitively difficult to do well without local community knowledge. 
 
 This year, MGGG worked to make COI collection easier and more usable than it has been in past redistricting cycles, using our public mapping software called Districtr. This lets us collect spatialized testimony from the public, combining narrative descriptions with the ability to paint community areas using the same kinds of mapping software that will ultimately be used to draw the lines. The team has organized and hosted weekly student-led train-the-trainer sessions throughout 2021 to offer background, tips, and hands-on help with COI mapping.
-
-
 <!--more-->
 
-[ See an [example submission from Ohio](https://portal.ohio-mapping.org/submission/c891) ] 
+
+<div style="text-align: center;">
+[See an <a href="https://portal.ohio-mapping.org/submission/c891" target="_blank" >example submission from Ohio</a>]
+</div>
 
 In partnership with various state organizations championing the outreach effort, MGGG launched a series of online public portals to collect COI data with Districtr in Florida, Michigan, Missouri, New Mexico, Ohio, Pennsylvania, Texas, and Wisconsin (in addition to several smaller localities). We then used clustering techniques from data science to aggregate and synthesize these in four states: Michigan, Missouri, Ohio, and Wisconsin. 
 
@@ -31,26 +29,21 @@ To aggregate the public testimony, we assembled an academic team including membe
 
 Our COI clusters can be used to identify hotspots of public testimony and to synthesize common concerns expressed in the testimony. By exploring the individual submissions, commissions can determine if clusters are best served by remaining in one district or, rather, if they would maximize their voice by forming a significant part of multiple districts. 
 
-<figure class="post__image">
+<figure class="post__image" style="display: block; margin-left: auto; margin-right: auto; width: 75%;">
   <img class="post__image" src="/uploads/wi_heatmap.png" alt="">
 </figure>
 
-<figure class="post__image">
+<figure class="post__image" style="display: block; margin-left: auto; margin-right: auto; width: 75%;">
   <img class="post__image" src="/uploads/mo_heatmap.png" alt="">
 </figure>
 
-</div>
 
 {% include portals-table.html %}
 
-<div class="l-center l-content" markdown="1">
 You can read the final reports for MI, MO, OH, and WI below, and you can use the “Communities” tab in Districtr for those four states to explore the clusters for yourself.
 
 LINKS TO FINAL PRODUCTS
 - Michigan: 1,037 areas mapped as of Sept 1 → 34 clusters.  ([report](/publications/Michigan-COI.pdf)/[districtr](http://districtr.org/michigan))
-- Missouri: 808 areas mapped as of Sept 1 → 35 clusters.  ([report](/publications/COI-Missouri-PhaseC.pdf)/[districtr](http://districtr.org/missouri))
-- Ohio: 996 areas mapped as of Sept 1 → 22 clusters.  ([report](/publications/COI-Ohio-Final.pdf)/[districtr](http://districtr.org/ohio))
+- Missouri: 808 areas mapped as of Sept 1 → 35 clusters.  ([report](/publications/Missouri-COI.pdf)/[districtr](http://districtr.org/missouri))
+- Ohio: 996 areas mapped as of Sept 1 → 22 clusters.  ([report](/publications/Ohio-COI.pdf)/[districtr](http://districtr.org/ohio))
 - Wisconsin: 1,203 areas mapped as of Sept 1 → 36 clusters.  ([report](/publications/Wisconsin-COI.pdf)/[districtr](http://districtr.org/wisconsin))
-
-
-</div>
