Add hidden flag for job postings

--- a/_posts/2019-04-29-jobs.md
+++ b/_posts/2019-04-29-jobs.md
@@ -32,6 +32,8 @@ many ways as possible.
 <ul class="card-list">
 {% assign jobs = site.jobs | sort: "position" %}
 {% for job in jobs %}
-    {% include job.html job=job %}
+    {% if job.hidden == false %}
+        {% include job.html job=job %}
+    {% endif %}
 {% endfor %}
 </ul>
