--- a/_posts/2025-03-10-ma-report.md
+++ b/_posts/2025-03-10-ma-report.md
@@ -19,6 +19,5 @@ lines. We present extensive results for single transferable vote (STV), a style 
 in multi-member districts. Broadly, we find that STV is likely to secure representation that is in line
 with support proportionality, or the share of voters who support each slate of candidates.
 
-You can download our report [here.](/MA-report) 
-<!-- and can look at New America's roll out [here.]() -->
+You can download our report [here,](/MA-report) and can look at New America's roll out [here.](https://www.newamerica.org/political-reform/briefs/enhancing-representation-in-massachusetts/)
 
