restore fairvote post

--- a/_posts/2024-11-29-strucdem.md
+++ b/_posts/2024-11-29-strucdem.md
@@ -35,7 +35,7 @@ In a sequence of papers and reports from 2020-2022, we build up a toolkit for un
 * Introducing some generative models that incorporate polarization &mdash;  [SSRN](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3778021) (2021)
   * *key finding: districts can be good or bad for a minority group depending on how they are geographically distributed and who draws the lines, but RCV secures rough proportionality under a wide range of electoral conditions in four places we studied*
     
-* What if the House of Representatives were elected by ranked choice nationally? &mdash;  [FRA project](https://mggg.org/FRA-report) and [Supplement](https://mggg.org/FRA-supplement) (2022)
+* What if the House of Representatives were elected by ranked choice nationally? Check out our study with [FairVote](https://fairvote.org) &mdash;  [FRA project](https://mggg.org/FRA-report) and [Supplement](https://mggg.org/FRA-supplement) (2022)
   * *key finding: it is surprisingly hard to gerrymander multi-member ranked choice districts!*
     
 * Massachusetts has the most uniform political geography of any state we know.  How could ranked choice improve representation for minority groups?  (including Republicans!) &mdash;  [MA report](https://mggg.org/MA-report) (2024)
