--- a/_posts/2023-06-06-FRA.md
+++ b/_posts/2023-06-06-FRA.md
@@ -2,7 +2,8 @@
  title: "Modeling the Fair Representation Act"
  date: 2023-06-06 00:00:00 Z
  categories:
- - news 
+ - news  
+ short_title: Modeling the FRA
  authors: MGGG
  image: "/uploads/FV.png"
  layout: post
