update card structure to expand on click

--- a/_posts/2018-11-25-virginia.md
+++ b/_posts/2018-11-25-virginia.md
@@ -4,8 +4,7 @@ date: 2018-11-25 00:00:00 Z
 authors: MGGG
 image: "/uploads/va2018-clipped.svg"
 image_alt: An abstract representation of a BVAP plot
-categories:
-  - reports
+categories: []
 description:
   At the time of writing, Virginia is in the process of replacing its House of
   Delegates districting plan after eleven of the districts were ruled
