--- a/_posts/2019-04-15-chicago.md
+++ b/_posts/2019-04-15-chicago.md
@@ -2,8 +2,8 @@
 title: Study of Reform Proposals for Chicago City Council
 date: 2019-04-15 00:00:00 Z
 categories:
-  - reports
   - news
+category_nav: reports
 authors: MGGG
 featured: true
 pdf: "/Chicago.pdf"
