--- a/_posts/2023-06-06-FRA.md
+++ b/_posts/2023-06-06-FRA.md
@@ -3,11 +3,13 @@ title: "Modeling the Fair Representation Act"
 date: 2023-06-06 00:00:00 Z
 categories:
 - news  
+category_nav: reports
 short_title: Modeling the FRA
 authors: MGGG
 featured: true
 image: "/uploads/FV.png"
 layout: post
+permalink: /fra
 ---
  
 We're delighted to share a study entitled *Modeling the Fair Representation Act*, undertaken in 
