--- a/_posts/2024-02-22-micrc.md
+++ b/_posts/2024-02-22-micrc.md
@@ -1,7 +1,6 @@
 ---
 title: Michigan Independent Citizens Redistricting Commission Post-Mortem
-categories:
-  - reports
+categories: []
 description: "[Download the report](/publications/MICRC-Report.pdf)"
 no_title_link: true
 ---
