--- a/_posts/2025-03-10-ma-report.md
+++ b/_posts/2025-03-10-ma-report.md
@@ -3,6 +3,7 @@ title: "Comparing Electoral Systems for the Massachusetts Legislature"
 date: 2025-03-10 00:00:00 Z
 categories:
   - news
+category_nav: reports
 authors: MGGG
 featured: true
 permalink: /ma_legislature
