--- a/_posts/2019-10-21-lowell.md
+++ b/_posts/2019-10-21-lowell.md
@@ -2,8 +2,8 @@
 title: Election Reform in Lowell, MA
 date: 2019-10-21 00:00:00 Z
 categories:
-  - reports
   - news
+category_nav: reports
 authors: MGGG
 featured: true
 permalink: /lowell
@@ -13,8 +13,8 @@ Two years ago, the City of Lowell was sued because its system of election was sa
 
 We have two reports, which you can download here:
 
-* [Public Report](/Lowell-Report) with explanations of alternatives, pros and cons, and some of our findings (non-technical)
-* [Detailed Report](/Lowell-Detailed-Report) explaining the models we used in our study (technical)
+* [Public Report](/publications/Lowell-Report.pdf) with explanations of alternatives, pros and cons, and some of our findings (non-technical)
+* [Detailed Report](/publications/Lowell-Detailed-Report.pdf) explaining the models we used in our study (technical)
 
 Versions of the public report went out in [Spanish](https://mggg.org/publications/Lowell-Report_SP.pdf), [Portuguese](https://mggg.org/publications/Lowell-Report_PT.pdf), and [Cambodian Khmer](https://mggg.org/publications/Lowell-Report_KH.pdf)!
 
