update job links

--- a/_posts/2025-11-01-jobs.md
+++ b/_posts/2025-11-01-jobs.md
@@ -23,18 +23,18 @@ Major activities of the lab include:
 Here are our open job opportunities as of November 1, 2025.  We will add links to HR pages as they become available.
 
 <!--more-->
+## Software Developers
+
+We hope to hire 1-2 full-time software developers into the Data Science Institute at UChicago.  You can apply [here](https://uchicago.wd5.myworkdayjobs.com/en-US/External/job/Chicago-IL/Research-Software-Engineer_JR32051-1?q=dsi).
+
+## Hybrid Postdoctoral Positions
+
+This is a new kind of position for a recent PhD -- you will come to UChicago for an in-person year of training and research, then conduct *field work* embedded as a research director at a nonprofit or other NGO engaged in democracy work.  We have multiple excellent partner organizations lined up as hosts.  After the field work, you return to Chicago to finish the three-year postdoc.  These positions should prepare applicants for academic or non-academic career paths, equally. You can apply [here](https://uchicago.infoready4.com/#freeformCompetitionDetail/2000551).
 
 ## Lab Manager / Program Director
 
 The Data and Democracy Lab sits inside the broader DDRI (Data and Democracy Research Initiative).  We seek to have a pair of leaders heading these ambitious and wide-ranging programs, and we are currently searching for one of the two roles.  PhD or JD is preferred, though experience running a complex organization can be an alternative qualification.  
 
-## Software Developers
-
-We hope to hire 1-2 full-time software developers into the Data Science Institute at UChicago.  
-
-## Hybrid Postdoctoral Positions
-
-This is a new kind of position for a recent PhD -- you will come to UChicago for an in-person year of training and research, then conduct *field work* embedded as a research director at a nonprofit or other NGO engaged in democracy work.  We have multiple excellent partner organizations lined up as hosts.  After the field work, you return to Chicago to finish the three-year postdoc.  These positions should prepare applicants for academic or non-academic career paths, equally.
 
 ## Pre-Doctoral Positions
 
