--- a/_posts/2024-11-29-strucdem.md
+++ b/_posts/2024-11-29-strucdem.md
@@ -3,7 +3,7 @@ title: "Ranked Choice Voting and ‘Structural Democracy’"
 date: 2024-11-14 00:00:00 Z
 categories:
   - research
-authors: MGGG
+authors: Data and Democracy Lab
 featured: true
 permalink: /struc_dem
 excerpt_separator: "<!--more-->"
