update civic tech with images

--- a/_posts/2024-03-03-votekit.md
+++ b/_posts/2024-03-03-votekit.md
@@ -4,6 +4,7 @@ date: 2024-03-04 00:00:00 Z
 categories:
   - civic-tech
 excerpt_separator: "<!--more-->"
+image: "/uploads/VK-banner.png"
 ---
 
 VoteKit is our "Swiss army knife for computational social choice research." This Python package provides an end-to-end pipeline for reading in ballot data, running ballots through a voting rule to get election outcomes, and then visualizing and analyzing the preferences and winners. 
