--- a/_posts/2024-03-05-pyei.md
+++ b/_posts/2024-03-05-pyei.md
@@ -5,6 +5,7 @@ categories:
   - civic-tech
 excerpt_separator: "<!--more-->"
 href: 
+image: "/uploads/D3_portland_EI.png"
 ---
 
 Since ballots don't actually include demographic information, statistical inference methods are needed to estimate whether different demographic groups have different voting patterns. We can use this to identify polarized voting, which is required by courts in Voting Rights Act cases. PyEI is a Python toolkit that lets users apply a range of methods (especially variants of ER and EI) via an easy-to-use interface, with flexible options for saving and visualizing the outputs. 
