update election case studies

--- a/_posts/2023-06-06-FRA.md
+++ b/_posts/2023-06-06-FRA.md
@@ -10,12 +10,14 @@ featured: true
 image: "/uploads/FV.png"
 layout: post
 permalink: /fra
+excerpt_separator: "<!--more-->"
 ---
  
 We're delighted to share a study entitled *Modeling the Fair Representation Act*, undertaken in 
 partnership with [FairVote](https://fairvote.org), which has some surprising findings!
 
 The [Fair Representation Act](https://fairvote.org/our-reforms/fair-representation-act/) is model legislation that calls for members of the House of Representatives to be elected from multi-member districts, favoring districts that elect **three** or **five** members.  This means that a state like Florida, with 28 seats in the House, would need to be divided up into five 5-member districts and one 3-member district.  Ranked-choice voting would then be used in each of these districts to send representatives to Washington.
+<!--more-->
 
 In our study, we focus on the question of proportional representation for voters of color, and we find extremely encouraging evidence from our statistical modeling that suggests the ability to elect will be at least in keeping with population shares, across a range of different behavioral assumptions.  
 
