--- a/_posts/2025-11-01-jobs.md
+++ b/_posts/2025-11-01-jobs.md
@@ -10,6 +10,8 @@ excerpt_separator: "<!--more-->"
 
 ---
 
+In 2025-26, we are hiring for 6.5 positions.  Here are our open job opportunities as of December 4, 2025.
+<!--more-->
 
 The Data and Democracy Lab (née MGGG Redistricting Lab) is a research group led by PI Moon Duchin in the Data Science Institute at the University of Chicago.  
 Members of the lab engage in interdisciplinary research, drawing on approaches from geometry, topology, graphs and networks, probability/statistics, and algorithm design, 
@@ -20,9 +22,7 @@ Major activities of the lab include:
 - software development of our open-source packages in Python and various other languages; and
 - collaborating with community partners and civil rights organizations.
 
-Here are our open job opportunities as of November 1, 2025.  We will add links to HR pages as they become available.
 
-<!--more-->
 ## Software Developers
 
 We hope to hire 1-2 full-time software developers into the Data Science Institute at UChicago.  You can apply [here](https://uchicago.wd5.myworkdayjobs.com/en-US/External/job/Chicago-IL/Research-Software-Engineer_JR32051-1?q=dsi).
@@ -43,7 +43,7 @@ These are staff positions for recent college graduates who want more hands-on re
 
 ## Summer Internship 2026
 
-We are likely to have a small cohort of summer interns in 2026, as we have hosted in previous years.  Stay tuned for more!
+Due to our recent move to the University of Chicago, we will not be running an internship program this coming summer. UChicago students interested in summer research opportunities should contact the Lab directly. We hope to restart our intern program in summer 2027.
 
 
 <!-- We are not currently hiring.  Please check this page in the future for any updates to our openings. -->
