update predoc letters of reference

--- a/_posts/2025-11-01-jobs.md
+++ b/_posts/2025-11-01-jobs.md
@@ -39,7 +39,7 @@ You can apply [here](https://uchicago.wd5.myworkdayjobs.com/External/job/Illinoi
 
 ## Pre-Doctoral Positions
 
-These are staff positions for recent college graduates who want more hands-on research experience before applying to PhD programs.  Though more common in economics, they make a great deal of practical sense in other technical fields.  The pay range is similar to doctoral stipends, and the 1-2 year timespan allows you to be a principal contributor on software projects and a co-author on research papers.  You can apply [here](https://uchicago.wd5.myworkdayjobs.com/en-US/External/details/Predoctoral-Scholar_JR32397?q=predoc).
+These are staff positions for recent college graduates who want more hands-on research experience before applying to PhD programs.  Though more common in economics, they make a great deal of practical sense in other technical fields.  The pay range is similar to doctoral stipends, and the 1-2 year timespan allows you to be a principal contributor on software projects and a co-author on research papers.  You can apply [here](https://uchicago.wd5.myworkdayjobs.com/en-US/External/details/Predoctoral-Scholar_JR32397?q=predoc). Please have letter writers email their letters to Mindi Mysliwiec <mindi@uchicago.edu>, who is the chief of staff at the Data Science Institute. Please have your letter writers include your name and the role you are applying for in the email.
 
 ## Summer Internship 2026
 
