update press format

--- a/_posts/2024-10-30-sciline.md
+++ b/_posts/2024-10-30-sciline.md
@@ -5,6 +5,7 @@ categories:
   - press
   - news
 publication: SciLine
+press_type: Video Interview
 publication_date: 2024-10-30 00:00:00 Z
 href: https://www.sciline.org/elections/ohio-redistricting/
 ---
