update ital court titles

--- a/_posts/2021-12-28-nc2.md
+++ b/_posts/2021-12-28-nc2.md
@@ -1,5 +1,5 @@
 ---
-title: "North Carolina congressional and legislative (<i>Moore v. Harper</i>)"
+title: "North Carolina congressional and legislative <i>(Moore v. Harper)</i>"
 date: 2021-12-23 00:00:00 Z
 category_nav: reports
 authors: Moon Duchin
